# llhd

./: CMakeLists.txt  LICENSE.TXT  README.md
.github/workflows/: buildAndTest.yml
cmake/modules/: sanitizers.cmake
include/: CMakeLists.txt
include/Dialect/LLHD/: CMakeLists.txt  LLHDBase.td  LLHDDialect.h  LLHDOps.h  LLHDOps.td
include/LLHDToLLVM/: LLHDToLLVM.h  Passes.td
include/Simulator/: Engine.h  State.h  signals-runtime-wrappers.h
include/Simulator/Runtime/: Signals.h
include/Transforms/: Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/LLHD/: CMakeLists.txt  LLHDDialect.cpp  LLHDOps.cpp
lib/LLHDToLLVM/: CMakeLists.txt  LLHDToLLVM.cpp
lib/Simulator/: CMakeLists.txt  Engine.cpp  State.cpp  signals-runtime-wrappers.cpp
lib/Simulator/Runtime/: CMakeLists.txt  Signals.cpp
lib/Transforms/: CMakeLists.txt  FunctionEliminationPass.cpp  ProcessLoweringPass.cpp
llhdc/: CMakeLists.txt  llhdc.cpp
patches/: out_of_tree.patch  outoftree.patch
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/LLHD/: arithmetic.mlir  bitwise.mlir  const.mlir  enity.mlir  entity.mlir  ext.mlir  ins.mlir  inst.mlir  ops.mlir  proc.mlir  reg.mlir  sig.mlir  time.mlir  tuple.mlir  vec.mlir  wait.mlir
test/Examples/: CMakeLists.txt  acc.mlir  graycode.mlir  ops.mlir  simple.c  simple.mlir
test/LLHDToLLVM/: convert_arithmetic.mlir  convert_bitwise.mlir  convert_const.mlir  convert_entity.mlir  convert_process.mlir  convert_signals.mlir  convert_simple.mlir  convert_vlaue_manip.mlir
test/Simulator/: sim_simple.mlir
test/Transforms/: canonicalization.mlir  processLowering.mlir  totalFunctionInlining.mlir
tools/: CMakeLists.txt
tools/llhd-sim/: CMakeLists.txt  llhd-sim.cpp
tools/llhd-translate/: CMakeLists.txt  llhd-translate.cpp
tools/llhdc/: CMakeLists.txt  llhdc.cpp
